Text align fix

--- a/style.css
+++ b/style.css
@@ -26,7 +26,9 @@ body{
     font-family: 'Bungee';
     height: 30px;
     width: 100px;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: rgba(33,158,188,0.6);
 }
 
@@ -39,7 +41,7 @@ body{
     grid-template-columns: repeat(3,1fr);
     grid-template-rows: repeat(3,1fr);
     width: 40vw;
-    height: 60vh;
+    height: 70vh;
 }
 
 .box{
